Change names of test types. More eyes needed at some point...

--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -36,7 +36,7 @@ Welcome to the ALKiln testing framework! It helps you check that your docassembl
 Ready to start testing? Need to quickly refresh your memory on some important points? Start here.
 
 <!-- Change "install" to "setup"? -->
-- [Install ALKiln for your package and run tests](setup.mdx#recommended-setup)
+- [Install ALKiln for your package and run tests](setup.mdx#recommended)
 - [Write your first test](setup.mdx#first-test)
 - [Generate more complicated tests](https://plocket.github.io/alkiln_story/) <!-- (docs#generator) -->
 
