--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -6,6 +6,7 @@ slug: /alkiln/setup
 ---
 
 import GitHubSetup from './components/\_github_setup.md';
+import { GTOYS, AutoDIY, KittyLitter } from './components/\_test_types.js';
 
 :::warning
 WIP (Work in progress)
@@ -78,43 +79,44 @@ English language interferes
 - Manual/your server
 - GitHub sandbox (understand meaning?)
 
-- GitHub-&-you tm. GitHub-x-you. GitHub+you
+- GitHub-&-you tm. GitHub-x-you. GitHub+You
 - Auto DIY
 - GitHub sandbox
 -->
 
-<!--
-GitHub+You
+<!-- <GTOYS/> -->
 
-GitHub+you
-
-GitHub+U
- -->
 
 ## Types of tests {#types}
 
 There are three kinds of tests:
 
-1. GitHub tests that create and test a Project on your docassemble server
-2. Playground tests that you run manually from an interview you install on your server
-3. Isolated server tests that create their own docassemble server on GitHub and run tests there
+1. **<GTOYS/>** - GitHub-triggered tests that create and test a Project on your docassemble server
+2. **<AutoDIY/>** - Tests that you trigger manually from an interview you install on your docassemble server
+3. **<KittyLitter/>**[^sand] - GitHub-triggered tests that create their own docassemble server on GitHub and run tests there
 
-Every type of test runs on a docassemble server. Option 1 and option 3 both run on GitHub. Sorry about the names. Each type of test has its advantages and disadvantages.
+Each type of test has its advantages and disadvantages.
 
 <!--
+Every type of test runs on a docassemble server. Option 1 and option 3 both run on GitHub. Sorry about the names. Each type of test has its advantages and disadvantages.
+
+
 1. GitHub runs these automatically on your docassemble test server. These tests are triggered on GitHub. **(automatic test server tests/auto tests/auto server)**
 2. You run manually on your docassemble test server in your account. **(manual test server tests/manual tests/manual server)**
-3. GitHub runs these automatically on an isolated GitHub docassemble server. These tests are triggered on GitHub. **(automatic GitHub server tests/weird auto tests/auto remote/auto blackbox/auto isolated/auto fenced/auto sandbox/auto sequestered/~~temporary~~/enclosed/encapsulated/capsule/bounded/restricted/quarantined/restrained/secluded/closeted/lonesome/hermit/hermetic/private.../sealed/clean/blank)** (bounded or enclosed might be used in the text of its section to give it more context "within the bounds of a separate isolated GitHub server")
+3. GitHub runs these automatically on an isolated GitHub server with docassemble installed. These tests are triggered on GitHub. **(automatic GitHub server tests/weird auto tests/auto remote/auto blackbox/auto isolated/auto fenced/auto sandbox/auto sequestered/~~temporary~~/enclosed/encapsulated/capsule/bounded/restricted/quarantined/restrained/secluded/closeted/lonesome/hermit/hermetic/private.../sealed/clean/blank)** (bounded or enclosed might be used in the text of its section to give it more context "within the bounds of a separate isolated GitHub server")
 
 ## Hermes Trismegistus
- -->
+-->
 
 
-## Recommended setup: GitHub tests that run on your server {#recommended-setup}
+[^sand]: "The isolation metaphor is taken from the idea of children who do not play well together, so each is given [their] own sandbox to play in alone." - [Wikipedia](https://en.wikipedia.org/wiki/Sandbox_(computer_security))
+
+
+## Recommended: <GTOYS/> {#recommended}
 
 This is the way we recommend setting up ALKiln tests for a repository for the first time. You are least likely to run into setup problems with this method. Every repository that needs to use this kind of test must go through this setup process.
 
-The tests run whenever you commit any code to any branch on GitHub. You can read more [details and the pros and cons of GitHub tests](#github-details) below.
+The tests run whenever you commit any code to any branch on GitHub. You can read more [details and the pros and cons of <GTOYS/> tests](#githubNyou-details) below.
 
 **You need:**
 
@@ -185,9 +187,9 @@ You can read more about [the different parts of test files in other documentatio
 
 <!-- To run the tests you can commit new code to your GitHub repository or you can [trigger your workflow manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow#running-a-workflow). Authors usually [commit new code from their Playground](https://docassemble.org/docs/development.html#versioncontrol). -->
 
-## Test in your Playground {#playground-how-to}
+## <AutoDIY/> tests {#diy-how-to}
 
-If you set up tests for the Playground, any developer can run tests on any of their Projects when they are logged into the docassemble server. You can read more details and the [pros and cons of Playground tests](#playground-details) below.
+If you set up <AutoDIY/> tests, any developer can run tests on any of their Projects when they are logged into your docassemble test server. You can read more details and the [pros and cons of <AutoDIY/> tests](#diy-details) below.
 
 **You need:**
 
@@ -208,7 +210,7 @@ Add a link to adding a test to a project
 1. Make sure you are logged into your docassemble server.
 1. Go to your server's ["Package Management" page](https://docassemble.org/docs/packages.html#installing).
 1. [Use GitHub to install](https://docassemble.org/docs/packages.html#github_install) the [ALKilnInThePlayground package](https://github.com/SuffolkLITLab/docassemble-ALKilnInThePlayground) from its `main` branch.
-1. Follow [docassemble's instructions](https://docassemble.org/docs/config.html#dispatch) to add it to the [dispatch list](https://docassemble.org/docs/config.html#dispatch). This will add it to the server's list of interviews. It may look something like this:
+1. Follow [docassemble's instructions](https://docassemble.org/docs/config.html#dispatch) to add it to the dispatch list. This will add it to the server's list of interviews. It may look something like this:
 
 ```yml
 dispatch:
@@ -243,15 +245,15 @@ Add section in reminders about updating docassemble server (InPlayground) to new
 1. Optionally, if you have added "tags" to your tests using [the tag expression syntax](https://www.cuketest.com/en/cucumber/tag-expressions), you can use a tag expression to limit which tests you run. -->
 
 
-## Isolated server tests (advanced) {#isolated-server-how-to}
+## <KittyLitter/> tests (advanced) {#sandbox-how-to}
 
-Isolated server tests are the most secure because they never interact with your server. ALKiln makes a server on GitHub itself and runs the tests there.
+<KittyLitter/> tests are the most secure because they never interact with your server. ALKiln makes a server on GitHub itself and runs the tests there.
 
 Every repository that needs to use this kind of test must go through this setup process.
 
 This is an advanced method and may not work for everyone. We are happy to help you with it.
 
-The tests run whenever you commit any code to any branch on GitHub. You can read more details and the [pros and cons of isolated server tests](#isolated-server-details) below.
+The tests run whenever you commit any code to any branch on GitHub. You can read more details and the [pros and cons of <KittyLitter/> tests](#sandbox-details) below.
 
 **You need:**
 
@@ -269,7 +271,7 @@ The tests run whenever you commit any code to any branch on GitHub. You can read
 1. Sign in to the package's GitHub repository.
 1. Make a new branch. The name doesn't matter. We often call it `alkiln_tests`.
 1. Tap the choice to add a new file to the repository. You can do this on GitHub or on your own computer.
-1. In the field for the file's name, enter this text: `.github/workflows/alkiln_isolated_github_tests.yml`. You can give the file whatever name you want as long as it's in those folders and ends with `.yml`.
+1. In the field for the file's name, enter this text: `.github/workflows/some_name.yml`. You can give the file whatever name you want as long as it is in those folders and ends with `.yml`.
 1. This is your workflow file. Copy [ALKiln's own workflow file](https://github.com/SuffolkLITLab/ALKiln/blob/v5/.github/workflows/github_server.yml). Read the notes in that file to see what you need to change. You should pay attention to the notes that start with `#### Developer note` and follow those instructions.
 1. Commit this file to GitHub.
 1. In the same branch, navigate to your package's "sources" folder. These are the folders to get there: `docassemble/<YourPackageName>/data/sources`.
@@ -305,19 +307,21 @@ Then edit the new workflow to look like  -->
 
 You can also run the tests by [triggering your workflow manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow#running-a-workflow).
 
-<!-- Read more about GitHub isolated server test options here. -->
+<!-- TODO: Add link to running tests in writing_tests.mdx -->
+
+<!-- Read more about GitHub <KittyLitter/> test options here. -->
 
 
-## GitHub test details {#github-details}
+## <GTOYS/> test details {#githubNyou-details}
 
 <!-- TODO: "on your test server" with a link to security section -->
 These tests run on GitHub, but they still interact with a Project they create on your server.
 You can read about [running tests](writing_tests.mdx#github-triggers) in other documentation.
 
 
-### What is ALKiln doing? {#github-how}
+### What is ALKiln doing? {#githubNyou-how}
 
-When you run GitHub tests, ALKiln does the following:
+When you run <GTOYS/> tests, ALKiln does the following:
 
 1. ALKiln goes to the testing account you set up on your server and creates a new Project. If you log into that account, you'll be able to see the new Project in the list of projects.
 1. It uploads the relevant branch of your package into the Project.
@@ -333,9 +337,9 @@ When the tests are done, you can see a report and logs right in the [workflow's 
 Add link to section on test results
 :::
 
-[GitHub quota limits](https://docs.github.com/en/actions/learn-github-actions/usage-limits-billing-and-administration) probably will not be a problem, especially not for public repos.
+[GitHub quota limits](https://docs.github.com/en/actions/learn-github-actions/usage-limits-billing-and-administration) probably will not be a problem, especially not for public repositories.
 
-<!-- ## Workflow file for GitHub tests {#github-workflow-file} -->
+<!-- ## Workflow file for <GTOYS/> tests {#githubNyou-workflow-file} -->
 
 <!-- Should the below be just in the setup interview? It seems like it should be here too, but that doubles up on information location. I _would_ really like to avoid duplication if possible, especially about the specific contents of the workflow files, which already has to be in the setup interview. -->
 
@@ -362,18 +366,18 @@ Tags
 -->
 
 
-### Pros {#github-pros}
+### Pros {#githubNyou-pros}
 
-- ALKiln on GitHub will test any changes any team member commits. On your server, you only tests your changes.
+- ALKiln on GitHub will test any changes any team member commits. In <AutoDIY/> tests, you only test your changes.
 - On GitHub, there are ways to schedule tests to run regularly - every week, every day, or whatever schedule you prefer. If packages you depend on change and break your code, those tests will let you know.
 - If you've forgotten to add a file to the package that an interview depends on (like a missing template file), GitHub will catch that. It installs the file fresh in a new Project, so it only has the files that have been committed properly.
 - You can continue editing files in your Playground other than python files while the GitHub tests run because GitHub creates a whole new Project of its own.
 - You can configure your GitHub "action" to do other things, like create GitHub issues whenever tests fail.
 <!-- - TODO: Package size because of `dainstall`? -->
-<!-- [The Playground tests may also keep running. Have to test this out before adding this item] - If your server reloads during the test run, a few individual tests may fail, but ALKiln will still be able to continue and keep trying to run the rest of the tests. That is because the test code is in running from GitHub, so your reload doesn't stop that process. -->
+<!-- [The <AutoDIY/> tests may also keep running. Have to test this out before adding this item] - If your server reloads during the test run, a few individual tests may fail, but ALKiln will still be able to continue and keep trying to run the rest of the tests. That is because the test code is in running from GitHub, so your reload doesn't stop that process. -->
 
 
-### Cons {#github-cons}
+### Cons {#githubNyou-cons}
 
 For everyone:
 
@@ -390,7 +394,7 @@ Add links to docs about the trigger var
 :::
 
 
-## Playground test details {#playground-details}
+## <AutoDIY/> test details {#diy-details}
 
 You run these tests yourself from an ALKiln interview you install on your own docassemble development server or test server.
 
@@ -399,9 +403,9 @@ Add link to security section about not testing on production.
 :::
 
 
-### What is ALKiln doing? {#playground-how}
+### What is ALKiln doing? {#diy-how}
 
-When you run Playground tests, ALKiln does the following:
+When you log into your docassemble server account and run <AutoDIY/> tests, ALKiln does the following:
 
 :::warning TODO
 Add link to running the tests
@@ -416,16 +420,16 @@ When the tests are done, you will see a page with the output of the tests which 
 Link to description of results/output
 :::
 
-### Pros {#playground-pros}
+### Pros {#diy-pros}
 
 - You can skip putting your package on GitHub.
 - Running ALKiln on your server lets you loop through your development cycle faster - edit, test, edit, test. You don't have to go through committing your code to GitHub every time.
 - You can more easily limit your tests to a specific set of tests using [tag expressions](https://www.cuketest.com/en/cucumber/tag-expressions). You can use tags on GitHub too, it just takes more steps.
 - The full report output is easier to get right away.
-- If you also have GitHub tests, these tests can often help you avoid the red "x" that appears next to failing tests on GitHub. The red "x" is a useful piece of information, but it can be uncomfortable.
+- If you also have GitHub tests, running <AutoDIY/> tests before you commit can often help you avoid the red "x" that appears next to failing tests on GitHub. The red "x" is a useful piece of information, but it can be uncomfortable.
 
 
-### Cons {#playground-cons}
+### Cons {#diy-cons}
 
 For everyone:
 
@@ -446,15 +450,15 @@ Add links to docs about the trigger var
 1. Optionally, if you have added "tags" to your tests using [the tag expression syntax](https://www.cuketest.com/en/cucumber/tag-expressions), you can use a tag expression to limit which tests you run. -->
 
 
-## Isolated server test details {#isolated-server-details}
+## <KittyLitter/> test details {#sandbox-details}
 
-Isolated server tests are the most secure because they never interact with your server and they are temporary. Unfortunately, they also sometimes have more setup complications.
+<KittyLitter/> tests are the most secure because they never interact with your server and the isolated server they each create is temporary. Unfortunately, these tests also sometimes have more setup complications.
 
-These tests actually run on GitHub too, we just have not yet found better names for the different test types. You can read about [running tests](writing_tests.mdx#github-triggers) in other documentation.
+You can read about [running tests](writing_tests.mdx#github-triggers) in other documentation.
 
-### What is ALKiln doing? {#isolated-server-how}
+### What is ALKiln doing? {#sandbox-how}
 
-When you run isolated server tests, ALKiln does the following:
+When you run <KittyLitter/> tests, ALKiln does the following:
 
 1. ALKiln creates a server on GitHub itself.
 1. It installs the relevant branch of your package on that server.
@@ -473,19 +477,19 @@ Add link to section on test results
 [GitHub quota limits](https://docs.github.com/en/actions/learn-github-actions/usage-limits-billing-and-administration) probably will not be a problem, especially not for public repos.
 
 
-### Pros {#isolated-server-pros}
+### Pros {#sandbox-pros}
 
-- All the [same advantages as regular GitHub tests](#github-pros) as well as some additional ones.
+- All the [same advantages as regular GitHub tests](#githubNyou-pros) as well as some additional ones.
 - This is the most secure of all the methods. The tests don't interact with your server at all.
 - You can edit whatever files you want on your own server.
 - In some cases, no GitHub secrets are necessary.
-- Your tests will generally be less flaky. When a test fails it's more likely to be a problem with your code instead of a problem with the server, giving you better information. That's because the server is isolated on GitHub and no one is going to make that isolated server reload in the middle of the tests.
-- You don't have to set up or update any docassemble API keys or GitHub tokens.
-- I might be useful to test [Custom data types](https://docassemble.org/docs/fields.html#custom%20datatype) on an isolated server. A docassemble CustomDatatype affects a whole server. Testing it on an isolated server means it cannot affect the CustomDatatypes that are already on your server.
+- Your tests will generally be less flaky. When a test fails it's more likely to be a problem with your code instead of a problem with the server, giving you better information. That's because the server is isolated, or "sandboxed"[^sand], on GitHub and no one is going to make that sandboxed server reload in the middle of the tests.
+- You do not have to set up or update any docassemble API keys or GitHub tokens.
+- I might be useful to test [Custom data types](https://docassemble.org/docs/fields.html#custom%20datatype) on a sandboxed server. A docassemble CustomDatatype affects a whole server. Testing it on a sandboxed server means it cannot affect the CustomDatatypes that are already on your server.
 <!-- - [Not faster enough to note, I think, and only under some circumstances, like downloading files. Also depends on how much memory they give their server.] Can be a bit faster  -->
 
 
-### Cons {#isolated-server-cons}
+### Cons {#sandbox-cons}
 
 For everyone:
 
@@ -495,13 +499,13 @@ For everyone:
 
 For some people:
 
-- At this time, isolated server tests are unable to handle data stored externally. For example, data stored in an S3 bucket.<!--  If you still want this type of test, it is more work. You are welcome to use [our GitHub action code](https://github.com/SuffolkLITLab/ALKiln/blob/v5/action_for_github_server/action.yml) as a starting point, of course, to write your own GitHub action to create a server on GitHub with the right Docker build environment variables, S3 credentials, and config details from your dev server. -->
-- You **must** make sure you have properly required all your "Dependencies" on your Packages page. That is the only way the isolated server can know to download them.
-- All your package's dependencies **must** be published on pypi. That is the only place that the isolated server can get them.
+- At this time, <KittyLitter/> tests are unable to handle data stored externally. For example, data stored in an S3 bucket.<!--  If you still want this type of test, it is more work. You are welcome to use [our GitHub action code](https://github.com/SuffolkLITLab/ALKiln/blob/v5/action_for_github_server/action.yml) as a starting point, of course, to write your own GitHub action to create a server on GitHub with the right Docker build environment variables, S3 credentials, and config details from your dev server. -->
+- You **must** make sure you have properly required all your "Dependencies" on your Packages page. That is the only way the isolated/sandboxed[^sand] server can know to download them.
+- All your package's dependencies **must** be published on pypi. That is the only place that the sandboxed server can get them.
 <!-- - TODO: Package size because of `dainstall`? -->
 
 
-<!-- ## Workflow file for isolated server tests {#isolated-server-workflow-file} -->
+<!-- ## Workflow file for <KittyLitter/> tests {#sandbox-workflow-file} -->
 
 <!-- Should the below be just in the setup interview? It seems like it should be here too, but that doubles up on information location. I _would_ really like to avoid duplication if possible, especially about the specific contents of the workflow files, which already has to be in the setup interview. -->
 
